[project]
name = "deep_research_agent"
version = "0.1.0"
description = "Deep_Research_Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.3"
]

[project.scripts]
deep_research_agent = "deep_research_agent.main:kickoff"
run_crew = "deep_research_agent.main:kickoff"
train = "deep_research_agent.main:train"
replay = "deep_research_agent.main:replay"
test = "deep_research_agent.main:test"
run_with_trigger = "deep_research_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
